# aoc_1_python_vs_rust

./: .gitignore  Cargo.toml  requirements.txt
data/: input_100k.txt  input_10k.txt  input_1k.txt
python/: main.py
rust/: Cargo.toml
rust/src/: main.rs
